butts are now black

--- a/index.html
+++ b/index.html
@@ -88,6 +88,32 @@
       .block-donnerstag { background-color: #c3f9c8; } /* Positive (grün) */
       .block-freitag { background-color: #fef3c0; } /* Attention (gelb) */
       .block-ausbildung { background-color: #e7e0fd; } /* Transparent (lila) */
+       /* Button-Farben */
+       .block-montag button {
+        background-color: #fa9898;
+        color: rgb(19, 2, 2);
+      }
+      .block-dienstag button {
+        background-color: #eaeaea;
+        color: black;
+      }
+      .block-mittwoch button {
+        background-color: #d2e3fc;
+        color: black;
+      }
+      .block-donnerstag button {
+        background-color: #c3f9c8;
+        color: black;
+      }
+      .block-freitag button {
+        background-color: #fef3c0;
+        color: black;
+      }
+      .block-ausbildung button {
+        background-color: #e7e0fd;
+        color: black;
+      }
+
 
       .footer {
         background-color: #f1f1f1;
@@ -133,7 +159,7 @@
     <div class="container">
       <div class="block-montag">
         <ui5-button design="Negative" icon="calendar" onclick="toggleContent('content-montag', 'block-montag')">Montag</ui5-button>
-        <div class="day-content" id="content-montag">Ich binan gekommen dann ging es zur security und dann zu meinem Arbeitsplatz. danach habe ich meinen laptopt eingerichtet und grundlagen im progammiren gemacht
+        <div class="day-content" id="content-montag">Ich binan gekommen dann ging es zur security und dann zu meinem Arbeitsplatz. danach habe ich meinen laptopt eingerichtet und grundlagen im progammiren gemacht 
 
       <div class="block-dienstag">
         <ui5-button design="Emphasized" icon="calendar" onclick="toggleContent('content-dienstag', 'block-dienstag')">Dienstag</ui5-button>
