--- a/index.html
+++ b/index.html
@@ -91,27 +91,27 @@
        /* Button-Farben */
        .block-montag button {
         background-color: #fa9898;
-        color: rgb(19, 2, 2);
+        color: #fa9898;
       }
       .block-dienstag button {
         background-color: #eaeaea;
-        color: black;
+        color: #eaeaea;
       }
       .block-mittwoch button {
         background-color: #d2e3fc;
-        color: black;
+        color: #d2e3fc
       }
       .block-donnerstag button {
         background-color: #c3f9c8;
-        color: black;
+        color: #c3f9c8;
       }
       .block-freitag button {
         background-color: #fef3c0;
-        color: black;
+        color: #fef3c0;
       }
       .block-ausbildung button {
         background-color: #e7e0fd;
-        color: black;
+        color: #e7e0fd;
       }
 
 
