--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
     </header>
 
     <div class="logos">
-      <img src="https://openui5.org/images/ui5-logo.svg" alt="UI5 Logo" />
+      <img src=" file:///C:/Users/C5396031/Downloads/icon.svg" alt="UI5 Logo" />
       <img src="https://upload.wikimedia.org/wikipedia/commons/5/59/SAP_2011_logo.svg" alt="SAP Logo" />
     </div>
 
