--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
     </header>
 
     <div class="logos">
-      <img src=" file:///C:/Users/C5396031/Downloads/icon.svg" alt="UI5 Logo" />
+      <img src="https://community.sap.com/legacyfs/online/storage/blog_attachments/2020/12/SAPUI5_orange_vertical.png" alt="UI5 Logo" />
       <img src="https://upload.wikimedia.org/wikipedia/commons/5/59/SAP_2011_logo.svg" alt="SAP Logo" />
     </div>
 
