--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 
       <div class="block-dienstag">
         <ui5-button design="Emphasized" icon="calendar" onclick="toggleContent('content-dienstag', 'block-dienstag')">Dienstag</ui5-button>
-        <div class="day-content" id="content-dienstag"> Dienstag </div>
+        <div class="day-content" id="content-dienstag"> Dienstag Habe ich angefangen diese website mit UI5 ui5-webcomponentszu progammiren  </div>
       </div>
 
       <div class="block-mittwoch">
