--- a/index.html
+++ b/index.html
@@ -124,7 +124,14 @@
     </div>
 
     <div id="infoTexts">
-      <div id="montag-text" class="info-text">Ich bin angekommen dann ging es zur Security und dann zu meinem Arbeitsplatz. danach habe ich meinen Laptopt Eingerichtet und grundlagen im progammiren gemacht</div>
+      <div id="montag-text" class="info-text">
+        Am Montag habe ich das Unternehmen kennengelernt.<br />
+        Ich habe meinen Arbeitsplatz eingerichtet und meinen Laptop bekommen.
+        <br /><br />
+        <img src="IMG_0776.jpeg" alt="Mein Arbeitsplatz bei SAP" style="max-width: 90%; height: auto; border-radius: 10px; box-shadow: 0 4px 10px rgba(0,0,0,0.2); margin-top: 1rem;" />
+        </div>
+        
+      </div>
       <div id="dienstag-text" class="info-text"> Dienstag Habe ich angefangen diese website mit UI5-webcomponents zu progammiren .</div>
       <div id="mittwoch-text" class="info-text">Mittwoch habe ich die Webite nochmal angepasst und so gut wie Fertig gestellt.Außerdem habe ich an Besprechungen teilgenommen</div>
       <div id="donnerstag-text" class="info-text">. Kommt noch</div>
