2 img file upadatet

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
       
       <div class="image-grid">
       <img src="IMG_0776.jpeg" alt="Mein Arbeitsplatz bei SAP" />
-      <img src="bild2.jpeg" alt="Zweites Bild" />
+      <img src="Githubsetup.png" alt="Githubsetup" />
       <img src="bild3.jpeg" alt="Drittes Bild" />
       <img src="bild4.jpeg" alt="Viertes Bild" />
       </div>
