--- a/index.html
+++ b/index.html
@@ -197,17 +197,40 @@
 </div>
 </body>
 </html>
-.image-grid {
-  > display: flex;
-  > flex-wrap: wrap;
-  > justify-content: center;
-  > gap: 1rem;
-  > margin-top: 1.5rem;
-  > }
-  >
-  > .image-grid img {
-  > width: 100%;
-  > max-width: 300px;
-  > border-radius: 10px;
-  > box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
-  > }
+<div style="
+display: flex;
+flex-wrap: wrap;
+justify-content: center;
+gap: 1rem;
+margin-top: 1.5rem;
+">
+<img src="IMG_0776.jpeg" alt="Mein Arbeitsplatz bei SAP" style="
+width: 25%;
+height: auto;
+border-radius: 10px;
+box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+object-fit: cover;
+" />
+<img src="bild2.jpeg" alt="Zweites Bild" style="
+width: 25%;
+height: auto;
+border-radius: 10px;
+box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+object-fit: cover;
+" />
+<img src="bild3.jpeg" alt="Drittes Bild" style="
+width: 25%;
+height: auto;
+border-radius: 10px;
+box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+object-fit: cover;
+" />
+<img src="bild4.jpeg" alt="Viertes Bild" style="
+width: 25%;
+height: auto;
+border-radius: 10px;
+box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+object-fit: cover;
+" />
+</div>
+</div>
