--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 </head>
 <body>
 <div class="header">
-<img src="https://upload.wikimedia.org/wikipedia/commons/7/74/UI5_logo.png" alt="UI5 Logo" />
+<img src="sapui5.png" alt="UI5 Logo" />
 <h1>Dokumentation Praktikum SAP</h1>
 <img src="https://upload.wikimedia.org/wikipedia/commons/5/59/SAP_2011_logo.svg" alt="SAP Logo" />
 </div>
@@ -145,7 +145,7 @@ Ich habe meinen Arbeitsplatz eingerichtet und meinen Laptop bekommen.</p>
 
 <div class="image-grid">
 <img src="IMG_0776.jpeg" alt="Mein Arbeitsplatz bei SAP" />
-<img src="bild2.jpeg" alt="Zweites Bild" />
+<img src="Githubsetup.png" alt="Githubsetup" />
 <img src="bild3.jpeg" alt="Drittes Bild" />
 <img src="bild4.jpeg" alt="Viertes Bild" />
 </div>
