--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 <body>
 <div class="header">
 <img src="sapui5.png" alt="UI5 Logo" />
-<h1>Dokumentation Praktikum SAP</h1>
+<h1> Praktikum </h1>
 <img src="https://upload.wikimedia.org/wikipedia/commons/5/59/SAP_2011_logo.svg" alt="SAP Logo" />
 </div>
 
