--- a/index.html
+++ b/index.html
@@ -146,8 +146,8 @@ Ich habe meinen Arbeitsplatz eingerichtet und meinen Laptop bekommen.</p>
 <div class="image-grid">
 <img src="IMG_0776.jpeg" alt="Mein Arbeitsplatz bei SAP" />
 <img src="Githubsetup.png" alt="Githubsetup" />
-<img src="bild3.jpeg" alt="Drittes Bild" />
-<img src="bild4.jpeg" alt="Viertes Bild" />
+<img src="eingang.jpeg" alt="eingang" />
+<img src="Essen.jpeg" alt="Essen" />
 </div>
 </div>
 
